--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "imposterjs",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Generate fake/dummy data for testing",
   "main": "dist/index.js",
   "author": "Sadman Sakib",
@@ -15,5 +15,19 @@
     "eslint": "^8.20.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
-  }
+  },
+  "keywords": [
+    "imposter",
+    "imposterjs",
+    "Generate data for testing",
+    "fake",
+    "dummy",
+    "data",
+    "testing",
+    "debugging",
+    "generate",
+    "generator",
+    "generators",
+    "faker"
+  ]
 }
